--- a/src/Translation/Russian/translation.json
+++ b/src/Translation/Russian/translation.json
@@ -5,5 +5,6 @@
   "en": "Английский",
   "ru": "Русский",
   "time-left": "Осталось",
-  "attempts-left": "Осталось папыток"
+  "attempts-left": "Осталось папыток",
+  "start-game": "НАЧАТЬ ИГРУ"
 }
