--- a/src/Translation/English/translation.json
+++ b/src/Translation/English/translation.json
@@ -5,5 +5,6 @@
   "en": "English",
   "ru": "Russian",
   "time-left": "Time left",
-  "attempts-left": "Attempts left"
+  "attempts-left": "Attempts left",
+  "start-game": "START GAME"
 }
