--- a/src/Translation/Russian/translation.json
+++ b/src/Translation/Russian/translation.json
@@ -6,5 +6,6 @@
   "ru": "Русский",
   "time-left": "Осталось",
   "attempts-left": "Осталось папыток",
-  "start-game": "НАЧАТЬ ИГРУ"
+  "start-game": "НАЧАТЬ ИГРУ",
+  "retry": "ЗАНОВО"
 }
