--- a/src/Translation/Russian/translation.json
+++ b/src/Translation/Russian/translation.json
@@ -7,5 +7,21 @@
   "time-left": "Осталось",
   "attempts-left": "Осталось папыток",
   "start-game": "НАЧАТЬ ИГРУ",
-  "retry": "ЗАНОВО"
+  "retry": "ЗАНОВО",
+  "goal": "Конечная цель игры памяти - открыть все пары карт на игровой доске.",
+  "rules": [
+    "На игровой доске представлено разнообразие карт. Каждая карта имеет пару, то есть на доске есть две карты с одинаковым изображением.",
+    "В начале игры все карты находятся в закрытом состоянии, то есть изображение на карте скрыто.",
+    "Игроку предоставляется возможность открыть две случайные карты за ход.",
+    "Если две открытые карты не являются парой, они снова закрываются, и изображения становятся скрытыми.",
+    "Если две открытые карты являются парой (имеют одинаковое изображение), они остаются открытыми, и изображения остаются видимыми.",
+    "Игра продолжается до тех пор, пока все карты не будут открыты (победа) или до того момента, когда достигнут лимит ходов (поражение).",
+    "У игрока есть ограниченное количество ходов и игрок может видеть, сколько ходов у него осталось.",
+    "Игрок может нажать кнопку \"Повторить\" (Retry), чтобы сбросить игру и перемешать все карты.",
+    "У игры есть временное ограничение - 60 секунд. Если время истекает, игрок проигрывает.",
+    "Игрок может выбрать язык отображения между английским и русским.",
+    "После каждой победы игрок может сохранить свой результат в таблице лидеров, указав свое имя (5 символов). Рейтинг таблицы лидеров сортируется сначала по минимальному количеству ходов."
+  ],
+  "winning": "Вы выиграли!",
+  "losing": "Конец игры."
 }
