cards style changed. navbar with fixed

--- a/src/Translation/Russian/translation.json
+++ b/src/Translation/Russian/translation.json
@@ -1,11 +1,11 @@
 {
-  "main": "Главная",
-  "game": "Игра",
-  "leaders": "Лидеры",
-  "en": "Английский",
-  "ru": "Русский",
-  "time-left": "Осталось",
-  "attempts-left": "Осталось папыток",
+  "main": "ГЛАВНАЯ",
+  "game": "ИГРА",
+  "leaders": "ЛИДЕРЫ",
+  "en": "АГЛИЙСКИЙ",
+  "ru": "РУССКИЙ",
+  "time-left": "ОСТАЛОСЬ",
+  "attempts-left": "ОСТАЛОСЬ ПОПЫТОК",
   "start-game": "НАЧАТЬ ИГРУ",
   "retry": "ЗАНОВО",
   "goal": "Конечная цель игры памяти - открыть все пары карт на игровой доске.",
