--- a/src/Translation/Russian/translation.json
+++ b/src/Translation/Russian/translation.json
@@ -22,6 +22,9 @@
     "Игрок может выбрать язык отображения между английским и русским.",
     "После каждой победы игрок может сохранить свой результат в таблице лидеров, указав свое имя (5 символов). Рейтинг таблицы лидеров сортируется сначала по минимальному количеству ходов."
   ],
-  "winning": "Вы выиграли!",
-  "losing": "Конец игры."
+  "start": "СТАРТ",
+  "winning": "ВЫ ВЫИГРАЛИ",
+  "losing": "КОНЕЦ ИГРЫ",
+  "great-job": "ОТЛИЧНАЯ РАБОТА!",
+  "better-luck": "УДАЧИ В СЛЕДУЮЩИЙ РАЗ!"
 }
