game logic fixes

--- a/src/Translation/English/translation.json
+++ b/src/Translation/English/translation.json
@@ -26,5 +26,6 @@
   "winning": "YOU WON",
   "losing": "GAME OVER",
   "great-job": "GREAT JOB",
-  "better-luck": "BETTER LUCK NEXT TIM"
+  "better-luck": "BETTER LUCK NEXT TIM",
+  "save": "SAVE"
 }
