--- a/src/Translation/Russian/translation.json
+++ b/src/Translation/Russian/translation.json
@@ -26,5 +26,6 @@
   "winning": "ВЫ ВЫИГРАЛИ",
   "losing": "КОНЕЦ ИГРЫ",
   "great-job": "ОТЛИЧНАЯ РАБОТА!",
-  "better-luck": "УДАЧИ В СЛЕДУЮЩИЙ РАЗ!"
+  "better-luck": "УДАЧИ В СЛЕДУЮЩИЙ РАЗ!",
+  "save": "СОХРАНИТЬ"
 }
