--- a/src/Translation/Russian/translation.json
+++ b/src/Translation/Russian/translation.json
@@ -27,5 +27,8 @@
   "losing": "КОНЕЦ ИГРЫ",
   "great-job": "ОТЛИЧНАЯ РАБОТА!",
   "better-luck": "УДАЧИ В СЛЕДУЮЩИЙ РАЗ!",
-  "save": "СОХРАНИТЬ"
+  "save": "СОХРАНИТЬ",
+  "pause-error": "Запрещено переворачивать карту во время паузы игры!",
+  "flip-back-error": "Запрещено переворачивать угаданные карты!!",
+  "row-error": "Пожалуйста, выберите карту из второго ряда!"
 }
