shuffle cards horizontally done

--- a/src/Translation/Russian/translation.json
+++ b/src/Translation/Russian/translation.json
@@ -30,5 +30,6 @@
   "save": "СОХРАНИТЬ",
   "pause-error": "Запрещено переворачивать карту во время паузы игры!",
   "flip-back-error": "Запрещено переворачивать угаданные карты!!",
-  "row-error": "Пожалуйста, выберите карту из второго ряда!"
+  "row-error": "Пожалуйста, выберите карту из второго ряда!",
+  "shuffle-mode": "Переключиться в режим перемешивания"
 }
