--- a/src/Translation/English/translation.json
+++ b/src/Translation/English/translation.json
@@ -30,5 +30,6 @@
   "save": "SAVE",
   "pause-error": "Prohibited to flip the card during game pause!",
   "flip-back-error": "It is not permitted to flip back guessed cards!",
-  "row-error": "Please select a card from the second row!"
+  "row-error": "Please select a card from the second row!",
+  "shuffle-mode": "Switch to Shuffle Mode"
 }
