--- a/src/Translation/Russian/translation.json
+++ b/src/Translation/Russian/translation.json
@@ -28,8 +28,14 @@
   "great-job": "ОТЛИЧНАЯ РАБОТА!",
   "better-luck": "УДАЧИ В СЛЕДУЮЩИЙ РАЗ!",
   "save": "СОХРАНИТЬ",
-  "pause-error": "Запрещено переворачивать карту во время паузы игры!",
-  "flip-back-error": "Запрещено переворачивать угаданные карты!!",
-  "row-error": "Пожалуйста, выберите карту из второго ряда!",
-  "shuffle-mode": "Переключиться в режим перемешивания"
+  "pause-error": "ЗАПРЕЩЕНО ПЕРЕВОРАЧИВАТЬ КАРТУ ВО ВРЕМЯ ПАУЗЫ!",
+  "flip-back-error": "НЕЛЬЗЯ ПЕРЕВЕРНУТЬ УГАДАННЫЕ КАРТЫ ОБРАТНО!",
+  "row-error": "ПОЖАЛУЙСТА, ВЫБЕРИТЕ КАРТУ ИЗ ВТОРОГО РЯДА!",
+  "select": "ВЫБЕРИТЕ ЯЗЫК",
+  "shuffle-mode": "ПЕРЕКЛЮЧИТЬ В РЕЖИМ ПЕРЕМЕШИВАНИЯ",
+  "dark-mode": "ПЕРЕКЛЮЧИТЬ В ТЕМНЫЙ РЕЖИМ",
+  "light-mode": "ПЕРЕКЛЮЧИТЬ В СВЕТЛЫЙ РЕЖИМ",
+  "attempts-for": "ПОПЫТКИ ЗА",
+  "seconds": "СЕКУНД",
+  "spent": "ПОТРАЧЕНО"
 }
